--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="#about">About Me</a>
           <a href="#work">Work</a>
           <a href="#contact">Contact Me</a>
-          <a href="#cv">CV</a>
+          <a href="https://drive.google.com/file/d/1DgJefnzdVuUkQJIAYc53lscGfXCBiLRA/view?usp=sharing">CV</a>
       </nav>
   </header>
 
